pr-cli/deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pr-cli
  labels:
    name: pr-cli
    app.kubernetes.io/managed-by: kustomize
