pr-cli/deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pr-cli-webhook
  labels:
    app.kubernetes.io/version: "1.0.0"
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app.kubernetes.io/name: pr-cli
    app.kubernetes.io/component: webhook-service
